# globule

./: .clang-format  .gitignore  README.md  meson.build
examples/: basic.c  meson.build
include/globule/: fnmatch.h  glob.h
src/: fnmatch.c  glob.c  meson.build
test/: meson.build  test_fnmatch.c  test_glob.c
